Добавляет 1ю часть ДЗ

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,6 @@
             <li class="checklist-nav"><a href="" class="link list">Контакты</a></li>
           </ul>
         </nav>
-
         <ul class="list address-header">
           <li class="checklist-nav">
             <a href="emailto:info@devstudio.com" class="header-adress link-letter list">
@@ -75,12 +74,19 @@
           <ul class="list section-works-items">
             <li class="section-works-checklist">
               <a href="" class="list">
-                <img
-                  src="./images/project_1.jpg"
-                  alt="страница сайта на наутбуке"
-                  width="370"
-                  height="294"
-                />
+                <div class="blue">
+                  <img
+                    src="./images/project_1.jpg"
+                    alt="страница сайта на наутбуке"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -88,13 +94,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_2.jpg"
-                  alt="2 баскетболиста боряться за мяч"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_2.jpg"
+                    alt="2 баскетболиста боряться за мяч"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
+                    компании или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
                   <p class="text">Дизайн</p>
@@ -102,13 +115,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_3.jpg"
-                  alt="название ресторана на фоне рыбы"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_3.jpg"
+                    alt="название ресторана на фоне рыбы"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
+                    компании или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Ресторан Seafood</h2>
                   <p class="text">Приложение</p>
@@ -116,8 +136,15 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img src="./images/project_4.jpg" alt="наушники" width="370" height="294" />
+              <a href="" class="list">
+                <div class="blue">
+                  <img src="./images/project_4.jpg" alt="наушники" width="370" height="294" />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
+                    компании или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Проект Prime</h2>
                   <p class="text">Маркетинг</p>
@@ -125,13 +152,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_5.jpg"
-                  alt="белая и серая коробки"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_5.jpg"
+                    alt="белая и серая коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Проект Boxes</h2>
                   <p class="text">Приложение</p>
@@ -139,13 +173,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_6.jpg"
-                  alt="страница сайта на мониторе"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_6.jpg"
+                    alt="страница сайта на мониторе"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
@@ -153,13 +194,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_7.jpg"
-                  alt="разворот журнала"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_7.jpg"
+                    alt="разворот журнала"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Издание Limited Edition</h2>
                   <p class="text">Дизайн</p>
@@ -167,8 +215,15 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img src="./images/project_8.jpg" alt="этикетка" width="370" height="294" />
+              <a href="" class="list">
+                <div class="blue">
+                  <img src="./images/project_8.jpg" alt="этикетка" width="370" height="294" />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Проект LAB</h2>
                   <p class="text">Маркетинг</p>
@@ -176,13 +231,20 @@
               </a>
             </li>
             <li class="section-works-checklist">
-              <a href="" class="list"
-                ><img
-                  src="./images/project_9.jpg"
-                  alt="работа за ноутбуком"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="list">
+                <div class="blue">
+                  <img
+                    src="./images/project_9.jpg"
+                    alt="работа за ноутбуком"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="blue-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="clients">
                   <h2 class="section-title">Growing Business</h2>
                   <p class="text">Приложение</p>
