--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main>
       <section class="hero container-hero overlay">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button data-modal-open type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section class="benefits section">
         <div class="container">
@@ -114,12 +114,15 @@
           <ul class="list we-doing-items">
             <li class="we-doing-checklist">
               <img src="./images/img_1.jpg" alt="Создание алгоритма" width="370" height="294" />
+              <h3 class="we-doing-title">Десктопные приложения</h3>
             </li>
             <li class="we-doing-checklist">
               <img src="./images/img_2.jpg" alt="Варианты макетов" width="370" height="294" />
+              <h3 class="we-doing-title">Мобильные приложения</h3>
             </li>
             <li class="we-doing-checklist">
               <img src="./images/img_3.jpg" alt="Палитра цветов" width="370" height="294" />
+              <h3 class="we-doing-title">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -453,5 +456,17 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <p></p>
+        <button class="close" data-modal-close>
+          <svg class="modal-svg" width="18px" height="18px">
+            <use href="./images/symbol-defs.svg#icon-close-black" class="modal-icon"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
