добавляет задержку 250мс для ховера

--- a/portfolio.html
+++ b/portfolio.html
@@ -104,8 +104,8 @@
                   />
                   <p class="blue-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
-                    компании или частном лице.
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
                   </p>
                 </div>
                 <div class="clients">
@@ -125,8 +125,8 @@
                   />
                   <p class="blue-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
-                    компании или частном лице.
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
                   </p>
                 </div>
                 <div class="clients">
@@ -141,8 +141,8 @@
                   <img src="./images/project_4.jpg" alt="наушники" width="370" height="294" />
                   <p class="blue-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
-                    компании или частном лице.
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
                   </p>
                 </div>
                 <div class="clients">
